--- a/www/portal/index.html
+++ b/www/portal/index.html
@@ -130,7 +130,7 @@
       
       <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="lana" role="tabpanel" aria-labelledby="lana-tab">
-          <iframe src="http://192.168.10.200" id="lana-frame" name="lana-frame" onload="iframeanpassen(this)" sandbox="allow-scripts allow-forms allow-same-origin">
+          <iframe src="http://192.168.10.200" id="lana-frame" name="lana-frame" onload="iframeanpassen(this)">
             <p>LANA steht derzeit nicht zur Verfügung. Es kann keine Verbindung zum Meyton-Server hergestellt werden.</p>
           </iframe>
         </div>
