--- a/www/portal/index.html
+++ b/www/portal/index.html
@@ -33,6 +33,9 @@
       body {
         --bg-color-header: #e84a52;
         --color-header: #fff;
+        -moz-user-select: none;
+        -khtml-user-select: none;
+        user-select: none;
       }
       .bd-placeholder-img {
         font-size: 1.125rem;
