--- a/www/portal/index.html
+++ b/www/portal/index.html
@@ -160,7 +160,7 @@
           </iframe>
         </div>
         <div class="tab-pane fade" id="ergebnisse" role="tabpanel" aria-labelledby="ergebnisse-tab">
-          ...
+          <iframe src="http://www.125jahre-schuetzen-tiefenbach.info/ergebnisse/index.php" id="webseite-frame" name="webseite-frame" sandbox="allow-scripts allow-forms allow-same-origin"></iframe>
         </div>
         <div class="tab-pane fade" id="webseite" role="tabpanel" aria-labelledby="webseite-tab">
           <iframe src="http://www.schuetzenverein-tiefenbach.de" id="webseite-frame" name="webseite-frame" sandbox="allow-scripts allow-forms allow-same-origin"></iframe>
